--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -17,9 +17,13 @@ jobs:
       package-name: ${{ inputs.package-name }}
   run_unit_tests:
     if: ${{ needs.get_package_info.outputs.should-run-tests == 'true' }}
-    name: Run unit tests for ${{ inputs.package-name }}
+    strategy:
+      matrix:
+        python-version: [3.9, '3.10', 3.11, 3.12, 3.13]
+    name: Run unit tests for ${{ inputs.package-name }} with ${{ matrix.python-version }}
     needs: get_package_info
     uses: ./.github/workflows/run_unit_tests.yml
     with:
       package-name: ${{ inputs.package-name }}
       package-basepath: ${{ needs.get_package_info.outputs.package-basepath }}
+      python-version: ${{ matrix.python-version }}
