--- a/tools/grpc_generator/pyproject.toml
+++ b/tools/grpc_generator/pyproject.toml
@@ -1,18 +1,22 @@
-[tool.poetry]
+[project]
 name = "ni-apis-grpc-generator"
 version = "0.1.0"
 license = "MIT"
 description = "Python generator for NI gRPC APIs"
-authors = ["NI <opensource@ni.com>"]
+authors = [{name = "NI", email = "<opensource@ni.com>"}]
 readme = "README.md"
-packages = [{include = "grpc_generator", from = "src"}]
+dynamic = ["dependencies"]
+requires-python = ">=3.9,<4.0"
 
-[tool.poetry.scripts]
+[tool.poetry]
+packages = [{include = "grpc_generator", from = "src"}]
+requires-poetry = ">=2.1,<3.0"
+
+[project.scripts]
 grpc-generator = "grpc_generator.__main__:cli"
 generate-stubs = "grpc_generator.generate_stubs:main"
 
 [tool.poetry.dependencies]
-python = "^3.9"
 click = [
   { version = "^8.1.8", python = ">=3.9,<3.10" },
   { version = "^8.2.1", python = "^3.10" },
@@ -38,7 +42,7 @@ pytest-cov = ">=4.0"
 pytest-mock = ">=3.0"
 
 [build-system]
-requires = ["poetry-core>=1.8"]
+requires = ["poetry-core>=2.1.0,<3.0"]
 build-backend = "poetry.core.masonry.api"
 
 
