--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -8,15 +8,6 @@ on:
         default: ''
         required: true
         type: string
-      python-version:
-        description: 'The version of Python to use'
-        default: 3.11.9
-        required: true
-        type: string
-      os:
-        description: 'The name of the OS to use'
-        required: true
-        type: string
 
 jobs:
   get_package_info:
@@ -26,11 +17,15 @@ jobs:
       package-name: ${{ inputs.package-name }}
   run_unit_tests:
     if: ${{ needs.get_package_info.outputs.should-run-tests == 'true' }}
+    strategy:
+      matrix:
+        os: [windows-latest, ubuntu-latest]
+        python-version: [3.9, '3.10', 3.11, 3.12, 3.13]
     name: Run unit tests
     needs: get_package_info
     uses: ./.github/workflows/run_unit_tests.yml
     with:
       package-name: ${{ inputs.package-name }}
       package-basepath: ${{ needs.get_package_info.outputs.package-basepath }}
-      python-version: ${{ inputs.python-version }}
-      os: ${{ inputs.os }}
+      python-version: ${{ matrix.python-version }}
+      os: ${{ matrix.os }}
