Move workflow_dispatch to test_package
Signed-off-by: Joe Friedrichsen <114173023+jfriedri-ni@users.noreply.github.com>

--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -8,6 +8,13 @@ on:
         default: ''
         required: true
         type: string
+  workflow_dispatch:
+    inputs:
+      package-name:
+        description: 'The name of the package folder to test.'
+        default: ''
+        required: true
+        type: string
 
 jobs:
   get_package_info:
