--- a/.github/actions/run_and_upload_unit_tests/action.yml
+++ b/.github/actions/run_and_upload_unit_tests/action.yml
@@ -8,9 +8,6 @@ inputs:
     description: 'Relative path to the parent directory of the package.'
     required: false
     default: 'packages'
-  python-version:
-    description: 'The version of Python to use'
-    required: true
   os:
     description: 'The name of the OS to use'
     required: true
@@ -33,6 +30,6 @@ runs:
     - name: Upload ${{ inputs.package-name }} test results
       uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
       with:
-        name: test_results_unit_${{ inputs.package-name }}_${{ inputs.os }}_py${{ inputs.python-version }}
+        name: test_results_unit_${{ inputs.package-name }}_${{ inputs.os }}_py${{ env.pythonVersion }}
         path: ${{ github.workspace }}/${{ inputs.package-basepath }}/${{ inputs.package-name }}/test_results/*.xml
       if: always()
