--- a/.github/actions/run_and_upload_unit_tests/action.yml
+++ b/.github/actions/run_and_upload_unit_tests/action.yml
@@ -11,6 +11,9 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: debug
+      run: echo $GITHUB_ENV
+      shell: bash
     - name: Cache ${{ inputs.package-name }} virtualenv
       uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4.2.4
       with:
