--- a/packages/ni-grpc-extensions/pyproject.toml
+++ b/packages/ni-grpc-extensions/pyproject.toml
@@ -31,6 +31,7 @@ requires-python = '>=3.9,<4.0'
 
 [project.urls]
 repository = "https://github.com/ni/ni-apis-python"
+documentation = "https://ni-grpc-extensions.readthedocs.io/en/latest/"
 
 [tool.poetry]
 packages = [{include = "ni_grpc_extensions", from = "src"}]
