--- a/packages/ni.grpcdevice.v1.proto/pyproject.toml
+++ b/packages/ni.grpcdevice.v1.proto/pyproject.toml
@@ -31,6 +31,7 @@ requires-python = '>=3.9,<4.0'
 
 [project.urls]
 repository = "https://github.com/ni/ni-apis-python"
+documentation = "https://nigrpcdevicev1proto.readthedocs.io/en/latest/"
 
 [tool.poetry]
 packages = [
