--- a/packages/ni.measurements.data.v1.client/pyproject.toml
+++ b/packages/ni.measurements.data.v1.client/pyproject.toml
@@ -43,6 +43,8 @@ ni-measurements-data-v1-proto = { version = ">=0.1.0.dev0", allow-prereleases = 
 types-grpcio = ">=1.0"
 types-protobuf = ">=4.21"
 ni-measurementlink-discovery-v1-client = { path = "../ni.measurementlink.discovery.v1.client", develop = true }
+ni-datamonikers-v1-proto = { path = "../ni.datamonikers.v1.proto", develop = true }
+ni-measurements-metadata-v1-proto = { path = "../ni.measurements.metadata.v1.proto", develop = true }
 ni-measurements-data-v1-proto = { path = "../ni.measurements.data.v1.proto", develop = true }
 
 [tool.poetry.group.lint.dependencies]
