--- a/.github/workflows/check_analyzers.yml
+++ b/.github/workflows/check_analyzers.yml
@@ -21,7 +21,7 @@ on:
 
 jobs:
   check_analyzers:
-    name: Check analyzers for ${{ inputs.package-name }}
+    name: Analyze ${{ inputs.package-name }}({{ matrix.python-version }} / ${{ matrix.os }})
     strategy:
       matrix:
         os: [windows-latest, ubuntu-latest, macos-latest]
