--- a/.github/workflows/check_package.yml
+++ b/.github/workflows/check_package.yml
@@ -28,7 +28,7 @@ jobs:
       output-basepath: ${{ needs.get_package_info.outputs.package-basepath }}/${{ inputs.package-name }}/src
       output-format: ${{ needs.get_package_info.outputs.output-format }}
   check_analyzers:
-    name: Check analyzers for ${{ inputs.package-name }}
+    name: Analyze ${{ inputs.package-name }}
     needs: get_package_info
     uses: ./.github/workflows/check_analyzers.yml
     with:
